# ViewDocx

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pages.yml  release.yml
scripts/: bump-version.mjs
site/: index.html  styles.css
src/: detect.ts  dom.ts  main.ts  stats.ts  styles.css  viewer.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: cache.rs  commands.rs  lib.rs  main.rs  open_files.rs  pdf.rs  recent.rs
src/ui/: dropzone.ts  icons.ts  toolbar.ts
