[package]
name = "docview"
version = "1.0.3"
description = "Compact DOCX document viewer"
authors = ["Max Davydov"]
license = "MIT"
edition = "2021"

[lib]
name = "docview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.39"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
